# pass3d

./: Cargo.toml  README.md
4a98da1/src/: lib.rs
main/: Cargo.toml
main/src/: lib.rs
rockObj/: Cargo.toml
rockObj/src/: bufferGeometry.rs  lib.rs  perlin.rs  scrape.rs  sphere.rs
