[package]
name = "pass3d"
version = "0.1.0"
authors = ["3Dpass"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3d = { git = "https://github.com/3Dpass/p3d", tag = "v0.6.3" }
structopt = "0.3.13"
libc = "0.2"
parity-scale-codec = '2.0'
rand = "0.7.3"
genmesh = "0.6.2"
cgmath = "0.18.0"
schnorrkel = "0.10"
ecies-ed25519 = "0.5"

[lib]
crate-type = ["cdylib"]